--- a/index.html
+++ b/index.html
@@ -1,9 +1,95 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Tong Zhou</title>
-  </head>
-  <body>
-    <p>Under construction</p>
-  </body>
+<head>
+<style>
+body {
+  background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("background.jpg");
+  background-size: 2000px 2000px;
+  margin-left: 7em;
+  margin-right: 7em;
+}
+</style>
+<style>
+div.a {
+  float: right;
+  text-align: center;
+}
+div.b {
+  text-indent: 9em;
+  font-size: 1.2em;
+}
+</style>
+<style>
+h1 {
+  font-size: 2.5em;
+}
+
+h3 {
+  font-size: 1.7em;
+ }
+
+p {
+  font-size: 1.2em;
+  margin-right: 7em;
+}
+</style>
+
+<title>Tong ZHOU</title>
+</head>
+<body>
+
+
+<div class="a">
+<img src="2019.jpg" alt="me" width="450" height="337.5">
+<figcaption style="text-align:right;"> <i>University Parks, Oxford, England, 2019 <br> Photo credit: Yuwei Cheng</i> </figcaption>
+</div>
+
+<h1>Tong ZHOU 周童</h1>
+<hr style="width:30%;text-align:left;margin-left:0">
+
+<p>I am a Mathematics PhD candidate at University of California, Berkeley.<br> My advisor is <a href="https://math.berkeley.edu/~nadler/"> Prof. David Nadler</a>.</p>
+
+<h3>CONTACT</h3>
+<p>
+Department of Mathematics<br>
+University of California, Berkeley<br>
+Evans Hall<br>
+Berkeley, CA 94720-3840<br><br>
+Email: tong.zhou@berkeley.edu<br>
+</p>
+
+<hr style="width:30%;text-align:left;margin-left:0">
+
+<h3>SEMINARS</h3>
+<p>
+<b>Fall 2020 ~ Current:</b> Geometric Representation Theory Seminar, Prof. David Nadler <br>
+<div class="b"><b>Talk:</b> Fall 2020, Categorification of Hecke Algebras </div> <br>
+</p><p>
+<b>Current:</b> <a href="CondensedSeminar.html">Condensed Mathematics Seminar</a>
+</p>
+
+<hr style="width:30%;text-align:left;margin-left:0">
+
+<h3>TEACHING</h3>
+<p>
+<b>Fall 2021:</b> MATH 16B, Analytic Geometry and Calculus (Emiliano Gomez) <br>
+<b>Spring 2021:</b> MATH 16B, Analytic Geometry and Calculus (Arun Sharma) <br>
+<b>Fall 2020:</b> MATH 16A, Analytic Geometry and Calculus (Thomas Scanlon) <br>
+<b>Spring 2020:</b> MATH 1A, Calculus (Mina Aganagić) <br>
+<b>Fall 2019:</b> MATH 1A, Calculus (Alexander Paulin) <br>
+
+</p>
+<hr>
+<p>
+Apart from mathematics, I find peace and life in reading, listening, watching, contemplating, among many others: Mu Xin (木心), Nietzsche, Grothendieck; Chopin, Bach; Andrei Tarkovsky.
+</p>
+<br>
+<br>
+
+<figure align="center">
+<img src="muxinqinfeng.jpeg" alt="muxinqinfeng" width="1018.29" height="203.29">
+<figcaption style="text-align:enter;"> <i>—— Mu Xin, Fine Breeze (晴風), 1999</i> </figcaption>
+</figure>
+
+</body>
 </html>
