--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ p {
 
 <div class="a">
 <img src="2019.jpg" alt="me" width="450" height="337.5">
-<figcaption style="text-align:right;"> <i>University Parks, Oxford, England, 2019 <br> Photo credit: Yuwei Cheng</i> </figcaption>
+<figcaption style="text-align:right;"> <i>University Parks, Oxford, 2019 <br> Photo credit: Yuwei Cheng</i> </figcaption>
 </div>
 
 <h1>Tong ZHOU 周童</h1>
@@ -81,7 +81,7 @@ Email: tong.zhou@berkeley.edu<br>
 </p>
 <hr>
 <p>
-Apart from mathematics, I find peace and life in reading, listening, watching, contemplating, among many others: Mu Xin (木心), Nietzsche, Grothendieck; Chopin, Bach; Andrei Tarkovsky.
+Apart from mathematics, I find peace and life in the worlds of, among many others': Mu Xin (木心), Nietzsche, Grothendieck; Chopin, Bach; <a href="Tarkovsky.html">Andrei Tarkovsky</a>; and Trees.
 </p>
 <br>
 <br>
