--- a/CondensedSeminar.html
+++ b/CondensedSeminar.html
@@ -48,6 +48,11 @@ p {
 <hr style="width:30%;text-align:left;margin-left:0">
 
 <p>
+<b>Sep.3</b> Definition of condensed sets (Tong) <br>
+<b>Sep.10</b> Relation to topological spaces (Mark) <br>
+<br><br><br><br><br><br>
+
+<p>
 Resources:<br>
 <b>1.</b> Lecture notes by Scholze: <a href="https://www.math.uni-bonn.de/people/scholze/Condensed.pdf">[Condensed]</a>, <a href="https://www.math.uni-bonn.de/people/scholze/Analytic.pdf">[Analytic]</a> <br>
 <b>2.</b> Masterclass by Clausen and Scholze: <a href="https://www.math.ku.dk/english/calendar/events/condensed-mathematics/">Notes</a>, <a href="https://www.youtube.com/playlist?list=PLAMniZX5MiiLXPrD4mpZ-O9oiwhev-5Uq">Videos</a> <br>
