--- a/CondensedSeminar.html
+++ b/CondensedSeminar.html
@@ -48,8 +48,8 @@ p {
 <hr style="width:30%;text-align:left;margin-left:0">
 
 <p>
-<b>Sep.3</b> Definition of condensed sets (Tong) <br>
-<b>Sep.10</b> Relation to topological spaces (Mark) <br>
+<b>Sep.3</b> Definition of condensed sets (Tong) <a href="1Tong.pdf">Notes</a> <br>
+<b>Sep.10</b> Relation to topological spaces (Mark) <a href="2Mark.pdf">Notes</a><br>
 <br><br><br><br><br><br>
 </p>
 
