--- a/CondensedSeminar.html
+++ b/CondensedSeminar.html
@@ -50,6 +50,7 @@ p {
 <p>
 <b>Sep.3</b> Definition of condensed sets (Tong) <a href="1Tong.pdf">Notes</a> <br>
 <b>Sep.10</b> Relation to topological spaces (Mark) <a href="2Mark.pdf">Notes</a><br>
+<b>Sep.10</b> Condensed abelian groups (Gabriel) <br>
 <br><br><br><br><br><br>
 </p>
 
