--- a/CondensedSeminar.html
+++ b/CondensedSeminar.html
@@ -52,6 +52,10 @@ p {
 <b>Sep.10</b> Relation to topological spaces (Mark) <a href="2Mark.pdf">Notes</a><br>
 <b>Sep.17</b> Condensed abelian groups (Gabriel) <a href="3Gabriel.pdf">Notes</a><br>
 <b>Sep.24</b> Cohomology comparison theorem (Mark) <a href="4Mark.pdf">Notes</a> [We learned this new proof of the comparison theorem from Peter Haine.]<br>
+<b>Oct.1</b> Locally compact abelian groups (Tong)<br> 
+<b>Oct.8</b> Locally compact abelian groups (cont.) (Tong) <a href="5Tong.pdf">Notes</a><br>
+Solid abelian groups (Mark)<br>
+<b>Oct.15</b> Solid abelian groups (cont.) (Mark) <br>
 <br><br><br><br><br><br>
 </p>
 
