--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Email: tong.zhou@berkeley.edu<br>
 </p>
 <hr>
 <p>
-Apart from mathematics, I find peace and life in the worlds of, among many others': Mu Xin (木心), Nietzsche, Grothendieck; Chopin, Bach; <a href="Tarkovsky.html">Andrei Tarkovsky</a>; and Trees.
+Apart from mathematics, I find peace and life in the worlds of, among many others': Mu Xin (木心), Nietzsche, Grothendieck (<a href="ReS.html">partial translation of Récoltes et Semailles</a>); Chopin, Bach; <a href="Tarkovsky.html">Andrei Tarkovsky</a>; and Trees.
 </p>
 <br>
 <br>
