--- a/ReS.html
+++ b/ReS.html
@@ -39,7 +39,7 @@ p {
 <body>
 <p>
 <br><br><br><br><br>
-These are partial English translations of Récoltes et Semailles I made for my own use. <br><br><br>
+These are partial English translations of Récoltes et Semailles I made for my own use. Dates on file indicate versions of revision.<br><br><br>
 i) all of <a href="ReS0.pdf">Part 0</a> except parts of "A Letter" and "Postscript Epilogue" (based on Carmona's transcription),<br><br>
 ii) all of <a href="ReSI.pdf"> Part I</a> (with selected poetic paragraphs translated into Chinese) (based on transcription by unknown author),  <br><br>
 iii) mathematical contents of <a href="ReSII.pdf"> Part II</a> (based on Carmona's transcription). <br>
