--- a/CondensedSeminar.html
+++ b/CondensedSeminar.html
@@ -55,7 +55,8 @@ p {
 <b>Oct.1</b> Locally compact abelian groups (Tong)<br> 
 <b>Oct.8</b> Locally compact abelian groups (cont.) (Tong) <a href="5Tong.pdf">Notes</a><br>
 Solid abelian groups (Mark)<br>
-<b>Oct.15</b> Solid abelian groups (cont.) (Mark) <br>
+<b>Oct.15</b> Solid abelian groups (cont.) (Mark) <a href="6Mark.pdf">Notes</a><br>
+<b>Oct.22</b> Solid abelian groups (cont.) (Mark) <br>
 <br><br><br><br><br><br>
 </p>
 
