--- a/CondensedSeminar.html
+++ b/CondensedSeminar.html
@@ -56,7 +56,7 @@ p {
 <b>Oct.8</b> Locally compact abelian groups (cont.) (Tong) <a href="5Tong.pdf">Notes</a><br>
 Solid abelian groups (Mark)<br>
 <b>Oct.15</b> Solid abelian groups (cont.) (Mark) <a href="6Mark.pdf">Notes</a><br>
-<b>Oct.29</b> Solid abelian groups (cont.) (Mark) <br>
+<b>Oct.29</b> Solid abelian groups (cont.) (Mark) <a href="7Mark.pdf">Notes</a><br>
 <b>Nov.5</b> Condensed R vector spaces (Gabriel) <br>
 <br><br><br><br><br><br>
 </p>
