--- a/CondensedSeminar.html
+++ b/CondensedSeminar.html
@@ -57,7 +57,8 @@ p {
 Solid abelian groups (Mark)<br>
 <b>Oct.15</b> Solid abelian groups (cont.) (Mark) <a href="6Mark.pdf">Notes</a><br>
 <b>Oct.29</b> Solid abelian groups (cont.) (Mark) <a href="7Mark.pdf">Notes</a><br>
-<b>Nov.5</b> Condensed R vector spaces (Gabriel) <br>
+<b>Nov.5</b> Liquid R vector spaces (Gabriel) <a href="8Gabriel.pdf">Notes</a><br>
+<b>Nov.12</b> Liquid R vector spaces (cont.) (Gabriel) <br>
 <br><br><br><br><br><br>
 </p>
 
