--- a/CondensedSeminar.html
+++ b/CondensedSeminar.html
@@ -59,6 +59,7 @@ Solid abelian groups (Mark)<br>
 <b>Oct.29</b> Solid abelian groups (cont.) (Mark) <a href="7Mark.pdf">Notes</a><br>
 <b>Nov.5</b> Liquid R vector spaces (Gabriel) <a href="8Gabriel.pdf">Notes</a><br>
 <b>Nov.12</b> Liquid R vector spaces (cont.) (Gabriel) <br>
+<b>Nov.5</b> Liquid R vector spaces (cont.) (Gabriel) <a href="9Gabriel.pdf">Notes</a><br>
 <br><br><br><br><br><br>
 </p>
 
