--- a/ReS.html
+++ b/ReS.html
@@ -40,8 +40,8 @@ p {
 <p>
 <br><br><br><br><br>
 These are partial English translations of Récoltes et Semailles I made for my own use. Dates on file indicate versions of revision.<br><br><br>
-i) all of <a href="ReS0.pdf">Part 0</a> except parts of "A Letter" and "Postscript Epilogue" (based on Carmona's transcription),<br><br>
-ii) all of <a href="ReSI.pdf"> Part I</a> (with selected poetic paragraphs translated into Chinese) (based on transcription by unknown author),  <br><br>
+i) all of <a href="ReS0.pdf">Part 0</a> except parts of "A Letter" and "Postscript Epilogue" (based on <a href="https://agrothendieck.github.io/divers/ReS.pdf">Carmona's transcription</a>),<br><br>
+ii) all of <a href="ReSI.pdf"> Part I</a> (with selected poetic paragraphs translated into Chinese) (based on <a href="ReSunknown.pdf">transcription by unknown author</a>),  <br><br>
 iii) mathematical contents of <a href="ReSII.pdf"> Part II</a> (based on Carmona's transcription). <br>
 </p>
 
