--- a/CondensedSeminar.html
+++ b/CondensedSeminar.html
@@ -44,8 +44,10 @@ p {
 <figcaption style="text-align:right;"> <i>—— Kazimir Malevich, Black Square, 1915</i> </figcaption>
 </div>
 
-<h1>Fall 2021, Condensed Mathematics Seminar</h1>
+<h1>Condensed Mathematics Seminar</h1>
 <hr style="width:30%;text-align:left;margin-left:0">
+
+<h2>Fall 2021</h2>
 
 <p>
 <b>Sep.3</b> Definition of condensed sets (Tong) <a href="1Tong.pdf">Notes</a> <br>
@@ -60,9 +62,23 @@ Solid abelian groups (Mark)<br>
 <b>Nov.5</b> Liquid R vector spaces (Gabriel) <a href="8Gabriel.pdf">Notes</a><br>
 <b>Nov.12</b> Liquid R vector spaces (cont.) (Gabriel) <br>
 <b>Dec.3</b> Liquid R vector spaces (cont.) (Gabriel) <a href="9Gabriel.pdf">Notes</a><br>
-<br><br><br><br><br><br>
 </p>
 
+<hr style="width:30%;text-align:left;margin-left:0">
+
+<h2>Spring 2022</h2>
+
+
+
+
+
+
+
+
+
+
+<br><br><br><br><br>
+<hr style="width:50%;text-align:left;margin-left:0">
 <p>
 Resources:<br>
 <b>1.</b> Lecture notes by Scholze: <a href="https://www.math.uni-bonn.de/people/scholze/Condensed.pdf">[Condensed]</a>, <a href="https://www.math.uni-bonn.de/people/scholze/Analytic.pdf">[Analytic]</a> <br>
