--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Email: tong.zhou@berkeley.edu<br>
 <b>Fall 2020 ~ Current:</b> Geometric Representation Theory Seminar, Prof. David Nadler <br>
 <div class="b"><b>Talk:</b> Fall 2020, Categorification of Hecke Algebras </div> <br>
 </p><p>
-<b>Current:</b> <a href="CondensedSeminar.html">Condensed Mathematics Seminar</a>
+<b>Fall 2021 ~ Current:</b> <a href="CondensedSeminar.html">Condensed Mathematics Seminar</a>
 </p>
 
 <hr style="width:30%;text-align:left;margin-left:0">
