--- a/CondensedSeminar.html
+++ b/CondensedSeminar.html
@@ -67,8 +67,11 @@ Solid abelian groups (Mark)<br>
 <hr style="width:30%;text-align:left;margin-left:0">
 
 <h2>Spring 2022</h2>
+<p>
+<b>Feb.11</b> Analytic rings (Mark) <br>
+<b>Feb.18</b> Solid A-modules (Peter) <br>
 
-
+</p>
 
 
 
