--- a/CondensedSeminar.html
+++ b/CondensedSeminar.html
@@ -50,18 +50,18 @@ p {
 <h2>Fall 2021</h2>
 
 <p>
-<b>Sep.3</b> Definition of condensed sets (Tong) <a href="1Tong.pdf">Notes</a> <br>
-<b>Sep.10</b> Relation to topological spaces (Mark) <a href="2Mark.pdf">Notes</a><br>
-<b>Sep.17</b> Condensed abelian groups (Gabriel) <a href="3Gabriel.pdf">Notes</a><br>
-<b>Sep.24</b> Cohomology comparison theorem (Mark) <a href="4Mark.pdf">Notes</a> [We learned this new proof of the comparison theorem from Peter Haine.]<br>
+<b>Sep.3</b> Definition of condensed sets (Tong) <a href="CondensedSeminar/1Tong.pdf">Notes</a> <br>
+<b>Sep.10</b> Relation to topological spaces (Mark) <a href="CondensedSeminar/2Mark.pdf">Notes</a><br>
+<b>Sep.17</b> Condensed abelian groups (Gabriel) <a href="CondensedSeminar/3Gabriel.pdf">Notes</a><br>
+<b>Sep.24</b> Cohomology comparison theorem (Mark) <a href="CondensedSeminar/4Mark.pdf">Notes</a> [We learned this new proof of the comparison theorem from Peter Haine.]<br>
 <b>Oct.1</b> Locally compact abelian groups (Tong)<br> 
-<b>Oct.8</b> Locally compact abelian groups (cont.) (Tong) <a href="5Tong.pdf">Notes</a><br>
+<b>Oct.8</b> Locally compact abelian groups (cont.) (Tong) <a href="CondensedSeminar/5Tong.pdf">Notes</a><br>
 Solid abelian groups (Mark)<br>
-<b>Oct.15</b> Solid abelian groups (cont.) (Mark) <a href="6Mark.pdf">Notes</a><br>
-<b>Oct.29</b> Solid abelian groups (cont.) (Mark) <a href="7Mark.pdf">Notes</a><br>
-<b>Nov.5</b> Liquid R vector spaces (Gabriel) <a href="8Gabriel.pdf">Notes</a><br>
+<b>Oct.15</b> Solid abelian groups (cont.) (Mark) <a href="CondensedSeminar/6Mark.pdf">Notes</a><br>
+<b>Oct.29</b> Solid abelian groups (cont.) (Mark) <a href="CondensedSeminar/7Mark.pdf">Notes</a><br>
+<b>Nov.5</b> Liquid R vector spaces (Gabriel) <a href="CondensedSeminar/8Gabriel.pdf">Notes</a><br>
 <b>Nov.12</b> Liquid R vector spaces (cont.) (Gabriel) <br>
-<b>Dec.3</b> Liquid R vector spaces (cont.) (Gabriel) <a href="9Gabriel.pdf">Notes</a><br>
+<b>Dec.3</b> Liquid R vector spaces (cont.) (Gabriel) <a href="CondensedSeminar/9Gabriel.pdf">Notes</a><br>
 </p>
 
 <hr style="width:30%;text-align:left;margin-left:0">
@@ -69,7 +69,8 @@ Solid abelian groups (Mark)<br>
 <h2>Spring 2022</h2>
 <p>
 <b>Feb.11</b> Analytic rings (Mark) <br>
-<b>Feb.18</b> Solid A-modules (Peter) <br>
+<b>Feb.18</b> Solid A-modules and exceptional pushforward (Peter) <br>
+<b>Feb.25</b> Solid A-modules and exceptional pushforward (Peter) <a href="CondensedSeminar/2,3Peter.pdf">Notes</a><br>
 
 </p>
 
