--- a/CondensedSeminar.html
+++ b/CondensedSeminar.html
@@ -70,7 +70,9 @@ Solid abelian groups (Mark)<br>
 <p>
 <b>Feb.11</b> Analytic rings (Mark) <br>
 <b>Feb.18</b> Solid A-modules and exceptional pushforward (Peter) <br>
-<b>Feb.25</b> Solid A-modules and exceptional pushforward (Peter) <a href="CondensedSeminar/2,3Peter.pdf">Notes</a><br>
+<b>Feb.25</b> Solid A-modules and exceptional pushforward (cont.) (Peter) <a href="CondensedSeminar/2,3Peter.pdf">Notes</a><br>
+<b>Mar.4</b> Relativisation, adic spaces (Gabriel) <br>
+<b>Mar.11</b> Relativisation, adic spaces (cont.) (Gabriel) <a href="CondensedSeminar/4,5Gabriel.pdf">Notes</a><br>
 
 </p>
 
