--- a/CondensedSeminar.html
+++ b/CondensedSeminar.html
@@ -71,8 +71,12 @@ Solid abelian groups (Mark)<br>
 <b>Feb.11</b> Analytic rings (Mark) <br>
 <b>Feb.18</b> Solid A-modules and exceptional pushforward (Peter) <br>
 <b>Feb.25</b> Solid A-modules and exceptional pushforward (cont.) (Peter) <a href="CondensedSeminar/2,3Peter.pdf">Notes</a><br>
-<b>Mar.4</b> Relativisation, adic spaces (Gabriel) <br>
-<b>Mar.11</b> Relativisation, adic spaces (cont.) (Gabriel) <a href="CondensedSeminar/4,5Gabriel.pdf">Notes</a><br>
+<b>Mar.4</b> Relativisation, adic spaces, towards globalisation (Gabriel) <br>
+<b>Mar.11</b> Relativisation, adic spaces, towards globalisation (cont.) (Gabriel) <a href="CondensedSeminar/4,5Gabriel.pdf">Notes</a><br>
+<b>Mar.24</b> Globalisation (Mark) <br>
+<b>Apr.1</b> Globalisation (cont.) (Mark) <br>
+<b>Apr.8</b> Coherent duality (Tong) <br>
+<b>Apr.15</b> Coherent duality (cont.) (Tong) <br>
 
 </p>
 
