--- a/CondensedSeminar.html
+++ b/CondensedSeminar.html
@@ -76,7 +76,7 @@ Solid abelian groups (Mark)<br>
 <b>Mar.24</b> Globalisation (Mark) <br>
 <b>Apr.1</b> Globalisation (cont.) (Mark) <br>
 <b>Apr.8</b> Coherent duality (Tong) <br>
-<b>Apr.15</b> Coherent duality (cont.) (Tong) <br>
+<b>Apr.15</b> Coherent duality (cont.) (Tong) <a href="CondensedSeminar/8,9Tong.pdf">Notes</a><br>
 
 </p>
 
