--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Email: tong.zhou@berkeley.edu<br>
 <b>Fall 2020 ~ Current:</b> Geometric Representation Theory Seminar, Prof. David Nadler <br>
 <div class="b"><b>Talk:</b> Fall 2020, Categorification of Hecke Algebras </div> <br>
 </p><p>
-<b>Fall 2021 ~ Current:</b> <a href="CondensedSeminar.html">Condensed Mathematics Seminar</a>
+<b>Fall 2021 ~ Spring 2022:</b> <a href="CondensedSeminar.html">Condensed Mathematics Seminar</a>
 </p>
 
 <hr style="width:30%;text-align:left;margin-left:0">
@@ -81,7 +81,7 @@ Email: tong.zhou@berkeley.edu<br>
 </p>
 <hr>
 <p>
-Apart from mathematics, I find peace and life in the worlds of, among many others': Mu Xin (木心), Nietzsche, Grothendieck (<a href="ReS.html">partial translation of Récoltes et Semailles</a>); Chopin, Bach; <a href="Tarkovsky.html">Andrei Tarkovsky</a>; and Trees.
+<b>Miscellaneous:</b> <a href="ReS.html">translations of Récoltes et Semailles</a>; <a href="Tarkovsky.html">Andrei Tarkovsky</a>
 </p>
 <br>
 <br>
