--- a/ReS.html
+++ b/ReS.html
@@ -5,7 +5,7 @@
 body {
   background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("background.jpg");
   background-size: 2000px 2000px;
-  margin-left: 7em;
+  margin-left: 10em;
   margin-right: 7em;
 }
 </style>
@@ -18,6 +18,12 @@ div.b {
   text-indent: 9em;
   font-size: 1.2em;
 }
+div.half-row{
+  display: inline-block;
+  width: 50%;
+  padding: 0%;
+  float: right;
+}
 </style>
 <style>
 h1 {
@@ -29,7 +35,7 @@ h3 {
  }
 
 p {
-  font-size: 1.4em;
+  font-size: 1.5em;
   margin-right: 7em;
 }
 </style>
@@ -37,14 +43,24 @@ p {
 <title>Récoltes et Semailles</title>
 </head>
 <body>
-<p>
-<br><br><br><br><br>
-These are English translations of Récoltes et Semailles I made. The translation is (quasi-)literal. Dates on file indicate versions of revision.<br><br><br>
-i) all of <a href="ReS0.pdf">Part 0</a> except parts of "A Letter" and "Postscript Epilogue" (based on <a href="https://agrothendieck.github.io/divers/ReS.pdf">Carmona's transcription</a>) (Carmona has a <a href="https://agrothendieck.github.io/">webpage collection</a> of Grothendieck's work.),<br><br>
-ii) all of <a href="ReSI.pdf"> Part I</a> (with selected poetic paragraphs freely translated into <a href="ReSICh.pdf"> Chinese</a>) (based on <a href="ReSunknown.pdf">transcription by unknown author</a>),  <br><br>
-iii) mathematical contents of <a href="ReSII.pdf"> Part II</a> (based on Carmona's transcription). <br><br>
-iv) all of Part III, in progress. <br>
+
+
+<div class="half-row">
+<p style="font-size: 1.3em">"Nietzsche, on the other hand, ..., is a guesser, a seer, an artist, less interesting in what he does than in what he is."
+<br><br>—— George Brandes, <i>Friedrich Nietzsche</i></p>
+</div>
+
+
+
+<p style="width:88%">
+<br><br><br><br><br><br><br><br>
+English translations of <i>Récoltes et Semailles</i>. The translation is (quasi-)literal. <br><br><br>
+i) <a href="ReS0.pdf">Part 0</a>: Except some parts of "A Letter" and "Postscript Epilogue". (Based on <a href="https://agrothendieck.github.io/divers/ReS.pdf">Carmona's transcription</a>. Carmona has a <a href="https://agrothendieck.github.io/">webpage collection</a> of Grothendieck's work.) <br><br>
+ii) <a href="ReSI.pdf"> Part I</a>: Full. Some poetic paragraphs freely translated into <a href="ReSICh.pdf"> Chinese</a>. (Based on <a href="ReSunknown.pdf">transcription by unknown author</a>.)  <br><br>
+iii) <a href="ReSII.pdf"> Part II</a>: Only mathematical parts. (Based on Carmona's transcription). <br><br>
+iv) <a href="ReSIIIex.pdf"> Part III</a>: Some sections and paragraphs are omitted (indicated in text). Highlights of some beautiful paragraphs: 99, 103, 110, 114, 122, 124, 135, 144...  <a href="ReSIIICh.pdf"> Chinese</a>. <br>
 </p>
+
 
 
 </body>
