--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ p {
 
 <div class="a">
 <img src="2019.jpg" alt="me" width="450" height="337.5">
-<figcaption style="text-align:right;"> <i>University Parks, Oxford, 2019 <br> Photo credit: Yuwei Cheng</i> </figcaption>
+<figcaption style="text-align:right;"> </figcaption>
 </div>
 
 <h1>Tong ZHOU 周童</h1>
@@ -72,6 +72,7 @@ Email: tong.zhou@berkeley.edu<br>
 
 <h3>TEACHING</h3>
 <p>
+<b>Fall 2022:</b> MATH 16A, Analytic Geometry and Calculus (Arun Sharma) <br>
 <b>Fall 2021:</b> MATH 16B, Analytic Geometry and Calculus (Emiliano Gomez) <br>
 <b>Spring 2021:</b> MATH 16B, Analytic Geometry and Calculus (Arun Sharma) <br>
 <b>Fall 2020:</b> MATH 16A, Analytic Geometry and Calculus (Thomas Scanlon) <br>
