--- a/ReS.html
+++ b/ReS.html
@@ -46,7 +46,7 @@ p {
 
 
 <div class="half-row">
-<p style="font-size: 1.3em">"Nietzsche, on the other hand, ..., is a guesser, a seer, an artist, less interesting in what he does than in what he is."
+<p style="font-size: 1.3em">"Nietzsche,..., is a guesser, a seer, an artist, less interesting in what he does than in what he is."
 <br><br>—— George Brandes, <i>Friedrich Nietzsche</i></p>
 </div>
 
