--- a/ReS.html
+++ b/ReS.html
@@ -54,7 +54,8 @@ p {
 
 <p style="width:88%">
 <br><br><br><br><br><br><br><br>
-English translations of <i>Récoltes et Semailles</i>. The translation is (quasi-)literal. <br><br><br>
+English translations by Childe of <i>Récoltes et Semailles</i>. The translator's comments are as follows:<br><br><br><br>
+The translation is (quasi-)literal. The contents are: <br><br><br>
 i) <a href="ReS0.pdf">Part 0</a>: Except some parts of "A Letter" and "Postscript Epilogue". (Based on <a href="https://agrothendieck.github.io/divers/ReS.pdf">Carmona's transcription</a>. Carmona has a <a href="https://agrothendieck.github.io/">webpage collection</a> of Grothendieck's work.) <br><br>
 ii) <a href="ReSI.pdf"> Part I</a>: Full. Some poetic paragraphs freely translated into <a href="ReSICh.pdf"> Chinese</a>. (Based on <a href="ReSunknown.pdf">transcription by unknown author</a>.)  <br><br>
 iii) <a href="ReSII.pdf"> Part II</a>: Only mathematical parts. (Based on Carmona's transcription). <br><br>
