--- a/index.html
+++ b/index.html
@@ -60,18 +60,23 @@ Email: tong.zhou@berkeley.edu<br>
 
 <hr style="width:30%;text-align:left;margin-left:0">
 
+<h3>RESEARCHES</h3>
+<p>
+1. On the stability of vanishing cycles of étale sheaves in positive characteristic (<a href="https://arxiv.org/abs/2307.00416">arXiv</a>)
+</p>
+
+<hr style="width:30%;text-align:left;margin-left:0">
+
 <h3>SEMINARS</h3>
 <p>
-<b>Fall 2020 ~ Current:</b> Geometric Representation Theory Seminar, Prof. David Nadler <br>
-<div class="b"><b>Talk:</b> Fall 2020, Categorification of Hecke Algebras </div> <br>
-</p><p>
 <b>Fall 2021 ~ Spring 2022:</b> <a href="CondensedSeminar.html">Condensed Mathematics Seminar</a>
 </p>
 
 <hr style="width:30%;text-align:left;margin-left:0">
 
-<h3>TEACHING</h3>
+<h3>TEACHINGS</h3>
 <p>
+<b>Fall 2023:</b> MATH 16B, Analytic Geometry and Calculus (Emiliano Gomez) <br>
 <b>Fall 2022:</b> MATH 16A, Analytic Geometry and Calculus (Arun Sharma) <br>
 <b>Fall 2021:</b> MATH 16B, Analytic Geometry and Calculus (Emiliano Gomez) <br>
 <b>Spring 2021:</b> MATH 16B, Analytic Geometry and Calculus (Arun Sharma) <br>
@@ -82,7 +87,7 @@ Email: tong.zhou@berkeley.edu<br>
 </p>
 <hr>
 <p>
-<b>Miscellaneous:</b> <a href="ReS.html">translations of Récoltes et Semailles</a>; <a href="Tarkovsky.html">Andrei Tarkovsky</a>
+<b>Miscellanies:</b> <a href="ReS.html">translations of Récoltes et Semailles</a>; <a href="Tarkovsky.html">Andrei Tarkovsky</a>
 </p>
 <br>
 <br>
