--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Email: tong.zhou@berkeley.edu<br>
 
 <h3>RESEARCHES</h3>
 <p>
-1. On the stability of vanishing cycles of étale sheaves in positive characteristic (<a href="https://arxiv.org/abs/2307.00416">arXiv</a>)
+1. On the stability of vanishing cycles of étale sheaves in positive characteristic (<a href="https://arxiv.org/abs/2307.00416">arXiv:2307.00416</a>)
 </p>
 
 <hr style="width:30%;text-align:left;margin-left:0">
