--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Email: tong.zhou@berkeley.edu<br>
 
 <hr style="width:30%;text-align:left;margin-left:0">
 
-<h3>RESEARCHES</h3>
+<h3>RESEARCH</h3>
 <p>
 1. On the stability of vanishing cycles of étale sheaves in positive characteristic (<a href="https://arxiv.org/abs/2307.00416">arXiv:2307.00416</a>)
 </p>
@@ -74,7 +74,7 @@ Email: tong.zhou@berkeley.edu<br>
 
 <hr style="width:30%;text-align:left;margin-left:0">
 
-<h3>TEACHINGS</h3>
+<h3>TEACHING</h3>
 <p>
 <b>Fall 2023:</b> MATH 16B, Analytic Geometry and Calculus (Emiliano Gomez) <br>
 <b>Fall 2022:</b> MATH 16A, Analytic Geometry and Calculus (Arun Sharma) <br>
