--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ p {
 <h1>Tong ZHOU 周童</h1>
 <hr style="width:30%;text-align:left;margin-left:0">
 
-<p>I am a Mathematics PhD candidate at University of California, Berkeley.<br> My advisor is <a href="https://math.berkeley.edu/~nadler/"> Prof. David Nadler</a>.</p>
+<p>I am a fifth year mathematics PhD student at University of California, Berkeley.<br> My advisor is <a href="https://math.berkeley.edu/~nadler/"> Prof. David Nadler</a>.</p>
 
 <h3>CONTACT</h3>
 <p>
@@ -69,7 +69,7 @@ Email: tong.zhou@berkeley.edu<br>
 
 <h3>SEMINARS</h3>
 <p>
-<b>Fall 2021 ~ Spring 2022:</b> <a href="CondensedSeminar.html">Condensed Mathematics Seminar</a>
+<b>Fall 2021 ~ Spring 2022:</b> <a href="CondensedSeminar.html">Condensed Mathematics Seminar</a> (organiser)
 </p>
 
 <hr style="width:30%;text-align:left;margin-left:0">
