--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ p {
 
 <div class="a">
 <img src="2019.jpg" alt="me" width="450" height="337.5">
-<figcaption style="text-align:right;"> </figcaption>
+<figcaption style="text-align:right;"> <i>University Parks, Oxford</i></figcaption>
 </div>
 
 <h1>Tong ZHOU 周童</h1>
@@ -62,7 +62,7 @@ Email: tong.zhou@berkeley.edu<br>
 
 <h3>RESEARCH</h3>
 <p>
-1. On the stability of vanishing cycles of étale sheaves in positive characteristic (<a href="https://arxiv.org/abs/2307.00416">arXiv:2307.00416</a>)
+1. On the stability of vanishing cycles of étale sheaves in positive characteristic (<a href="http://arxiv.org/abs/2307.00416">arXiv:2307.00416</a>)
 </p>
 
 <hr style="width:30%;text-align:left;margin-left:0">
