--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ p {
 <h1>Tong ZHOU 周童</h1>
 <hr style="width:30%;text-align:left;margin-left:0">
 
-<p>I am a fifth year mathematics PhD student at University of California, Berkeley.<br> My advisor is <a href="https://math.berkeley.edu/~nadler/"> Prof. David Nadler</a>.</p>
+<p>I am a fifth year mathematics PhD student at University of California, Berkeley.<br> My advisor is <a href="https://math.berkeley.edu/~nadler/"> Prof. David Nadler</a>. Starting in Sep. 2024, I will be a postdoc at IAS.</p>
 
 <h3>CONTACT</h3>
 <p>
@@ -62,7 +62,9 @@ Email: tong.zhou@berkeley.edu<br>
 
 <h3>RESEARCH</h3>
 <p>
-1. On the stability of vanishing cycles of étale sheaves in positive characteristic (<a href="http://arxiv.org/abs/2307.00416">arXiv:2307.00416</a>)
+3. Character sheaves on reductive Lie algebras in positive characteristic (2024) (<a href="http://arxiv.org/abs/2404.19210">arXiv:2404.19210</a>)<br>
+2. The Fourier transform and characteristic cycles of monodromic ℓ-adic sheaves (2024) (<a href="http://arxiv.org/abs/2404.01621">arXiv:2404.01621</a>)<br>
+1. On the stability of vanishing cycles of étale sheaves in positive characteristic (2023) (<a href="http://arxiv.org/abs/2307.00416">arXiv:2307.00416</a>)
 </p>
 
 <hr style="width:30%;text-align:left;margin-left:0">
@@ -76,6 +78,7 @@ Email: tong.zhou@berkeley.edu<br>
 
 <h3>TEACHING</h3>
 <p>
+<b>Spring 2024:</b> MATH 16A, Analytic Geometry and Calculus (Ryan Hass) <br>
 <b>Fall 2023:</b> MATH 16B, Analytic Geometry and Calculus (Emiliano Gomez) <br>
 <b>Fall 2022:</b> MATH 16A, Analytic Geometry and Calculus (Arun Sharma) <br>
 <b>Fall 2021:</b> MATH 16B, Analytic Geometry and Calculus (Emiliano Gomez) <br>
