--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@ div.b {
 </style>
 <style>
 h1 {
-  font-size: 2.5em;
+  font-size: 2.3em;
 }
 
 h3 {
-  font-size: 1.7em;
+  font-size: 1.53em;
  }
 
 p {
-  font-size: 1.2em;
+  font-size: 1.27em;
   margin-right: 7em;
 }
+
 </style>
 
 <title>Tong ZHOU</title>
@@ -41,42 +42,44 @@ p {
 
 <div class="a">
 <img src="2019.jpg" alt="me" width="450" height="337.5">
-<figcaption style="text-align:right;"> <i>University Parks, Oxford</i></figcaption>
+<figcaption style="text-align:right;"> <i>Oxford, 2019</I></figcaption>
 </div>
 
 <h1>Tong ZHOU 周童</h1>
 <hr style="width:30%;text-align:left;margin-left:0">
 
-<p>I am a fifth year mathematics PhD student at University of California, Berkeley.<br> My advisor is <a href="https://math.berkeley.edu/~nadler/"> Prof. David Nadler</a>. Starting in Sep. 2024, I will be a postdoc at IAS.</p>
+<p>I am a postdoc at the Institute for Advanced Study, mentored by <a href="https://www.math.ias.edu/~bhatt/"> Bhargav Bhatt</a>. </br>From 2019 to 2024 I was a PhD student at University of California, Berkeley. My advisor is <a href="https://math.berkeley.edu/~nadler/"> David Nadler</a>. </p>
 
 <h3>CONTACT</h3>
 <p>
-Department of Mathematics<br>
-University of California, Berkeley<br>
-Evans Hall<br>
-Berkeley, CA 94720-3840<br><br>
-Email: tong.zhou@berkeley.edu<br>
+Email: <tt>tong.g.h.zhou@gmail.com</tt><br><br>
+School of Mathematics<br>
+Institute for Advanced Study<br>
+1 Einstein Drive<br>
+Princeton, NJ 08540
 </p>
 
-<hr style="width:30%;text-align:left;margin-left:0">
+<hr style="width:30%;text-align:left;margin-left:0;margin-bottom:-2px">
 
 <h3>RESEARCH</h3>
 <p>
-3. Character sheaves on reductive Lie algebras in positive characteristic (2024) (<a href="http://arxiv.org/abs/2404.19210">arXiv:2404.19210</a>)<br>
+3. Character sheaves on reductive Lie algebras in positive characteristic (2024) (<a href="http://arxiv.org/abs/2404.19210">arXiv:2404.19210</a>)<br> 
+&emsp;<a href="https://doi.org/10.1093/imrn/rnae221">International Mathematics Research Notices, 2024</a><br>
 2. The Fourier transform and characteristic cycles of monodromic ℓ-adic sheaves (2024) (<a href="http://arxiv.org/abs/2404.01621">arXiv:2404.01621</a>)<br>
 1. On the stability of vanishing cycles of étale sheaves in positive characteristic (2023) (<a href="http://arxiv.org/abs/2307.00416">arXiv:2307.00416</a>)
 </p>
 
-<hr style="width:30%;text-align:left;margin-left:0">
+<hr style="width:30%;text-align:left;margin-left:0;margin-bottom:-2px">
 
 <h3>SEMINARS</h3>
 <p>
 <b>Fall 2021 ~ Spring 2022:</b> <a href="CondensedSeminar.html">Condensed Mathematics Seminar</a> (organiser)
 </p>
 
-<hr style="width:30%;text-align:left;margin-left:0">
+<hr style="width:30%;text-align:left;margin-left:0;margin-bottom:20px">
 
-<h3>TEACHING</h3>
+<details>
+  <summary><p style="font-size:1.53em;display:inline"><b>TEACHING</b></p></summary>
 <p>
 <b>Spring 2024:</b> MATH 16A, Analytic Geometry and Calculus (Ryan Hass) <br>
 <b>Fall 2023:</b> MATH 16B, Analytic Geometry and Calculus (Emiliano Gomez) <br>
@@ -86,9 +89,12 @@ Email: tong.zhou@berkeley.edu<br>
 <b>Fall 2020:</b> MATH 16A, Analytic Geometry and Calculus (Thomas Scanlon) <br>
 <b>Spring 2020:</b> MATH 1A, Calculus (Mina Aganagić) <br>
 <b>Fall 2019:</b> MATH 1A, Calculus (Alexander Paulin) <br>
-
 </p>
-<hr>
+</details>
+
+
+<hr style="margin-top:20px">
+
 <p>
 <b>Miscellanies:</b> <a href="ReS.html">translations of Récoltes et Semailles</a>; <a href="Tarkovsky.html">Andrei Tarkovsky</a>
 </p>
