--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@ body {
 </style>
 <style>
 div.a {
-  float: right;
-  text-align: center;
+    float: right;
+    text-align: right;
 }
 div.b {
   text-indent: 9em;
   font-size: 1.2em;
+}
+div.image-container {
+    display: block;
+    text-align: center;
 }
 </style>
 <style>
@@ -101,10 +105,10 @@ Princeton, NJ 08540
 <br>
 <br>
 
-<figure align="center">
+<div class="image-container">
 <img src="muxinqinfeng.jpeg" alt="muxinqinfeng" width="1018.29" height="203.29">
-<figcaption style="text-align:enter;"> <i>—— Mu Xin, Fine Breeze (晴風), 1999</i> </figcaption>
-</figure>
+<figcaption style="text-align:center;"> <i>—— Mu Xin, Fine Breeze (晴風), 1999</i> </figcaption>
+</div>
 
 </body>
 </html>
