--- a/ReS.html
+++ b/ReS.html
@@ -54,8 +54,8 @@ p {
 
 <p style="width:88%">
 <br><br><br><br><br><br><br><br>
-The translation is (quasi-)literal. The contents are: <br><br><br>
-i) <a href="ReS0.pdf">Part 0</a>: Except some parts of "A Letter" and "Postscript Epilogue". (Based on <a href="https://agrothendieck.github.io/divers/ReS.pdf">Carmona's transcription</a>.) <br><br>
+The English translation is (quasi-)literal. The contents are: <br><br><br>
+i) <a href="ReS0.pdf">Part 0</a>: Except some parts of "A Letter" and "Postscript Epilogue". (Based on Carmona's transcription.) <br><br>
 ii) <a href="ReSI.pdf"> Part I</a>: Full. Some poetic paragraphs freely translated into <a href="ReSICh.pdf"> Chinese</a>. (Based on <a href="ReSunknown.pdf">transcription by an unknown author</a>.)  <br><br>
 iii) <a href="ReSII.pdf"> Part II</a>: Only the mathematical parts. (Based on Carmona's transcription). <br><br>
 iv) <a href="ReSIIIex.pdf"> Part III</a>: Omissions indicated in the text. Highlights of some beautiful paragraphs: 99, 103, 110, 114, 122, 124, 135, 144...  <a href="ReSIIICh.pdf"> Chinese</a>. <br>
