--- a/index.html
+++ b/index.html
@@ -67,17 +67,18 @@ Princeton, NJ 08540
 
 <h3>RESEARCH</h3>
 <p>
-3. Character sheaves on reductive Lie algebras in positive characteristic (2024) (<a href="http://arxiv.org/abs/2404.19210">arXiv:2404.19210</a>)<br> 
+4. Vanishing Cycles for Zariski-Constructible Sheaves on Rigid Analytic Varieties (2025) (<a href="https://arxiv.org/abs/2504.16365">arXiv:2504.16365</a>)<br> 
+3. Character Sheaves on Reductive Lie Algebras in Positive Characteristic (2024) (<a href="http://arxiv.org/abs/2404.19210">arXiv:2404.19210</a>)<br> 
 &emsp;<a href="https://doi.org/10.1093/imrn/rnae221">International Mathematics Research Notices, 2024</a><br>
-2. The Fourier transform and characteristic cycles of monodromic ℓ-adic sheaves (2024) (<a href="http://arxiv.org/abs/2404.01621">arXiv:2404.01621</a>)<br>
-1. On the stability of vanishing cycles of étale sheaves in positive characteristic (2023) (<a href="http://arxiv.org/abs/2307.00416">arXiv:2307.00416</a>)
+2. The Fourier Transform and Characteristic Cycles of Monodromic ℓ-adic Sheaves (2024) (<a href="http://arxiv.org/abs/2404.01621">arXiv:2404.01621</a>)<br>
+1. On the Stability of Vanishing Cycles of Étale Sheaves in Positive Characteristic (2023) (<a href="http://arxiv.org/abs/2307.00416">arXiv:2307.00416</a>)
 </p>
 
 <hr style="width:30%;text-align:left;margin-left:0;margin-bottom:-2px">
 
-<h3>SEMINARS</h3>
+<h3>SEMINARS ORGANISED</h3>
 <p>
-<b>Fall 2021 ~ Spring 2022:</b> <a href="CondensedSeminar.html">Condensed Mathematics Seminar</a> (organiser)
+<b>Fall 2021 ~ Spring 2022:</b> <a href="CondensedSeminar.html">Condensed Mathematics Seminar</a>
 </p>
 
 <hr style="width:30%;text-align:left;margin-left:0;margin-bottom:20px">
